--- a/css/layout.css
+++ b/css/layout.css
@@ -1,16 +1,42 @@
+/* Windows layout  */
+
 * {
-  font-size: large;
-  width: 960px;
-  margin: 0px auto;
-  background-color: teal
+  background-color: rgb(250, 232, 232);
+  /* display: flexbox; */
+  
 }
 
-header > div > p{
-  width: 960px;
-  text-align: center;
+.topbox{
+  /* width: 960px;
+  margin: 0 auto; */
+  display: flex;
 }
 
+#boxa {
+  flex: 1;
+}
 p {
+  flex: 1;
+}
+.mainbox{
+  display: flex;
+
+}
+
+.sectionbox {
+  display: flex;
+}
+
+.footerbox {
+  display: flex;
+}
+
+
+  /* Code to get the Paragraph to line up correctly - 
+  https://stackoverflow.com/questions/5703552/css-center-text-horizontally-and-vertically-inside-a-div-block 
+  
+  */
+/* p {
   background-color: transparent;
   text-align: center;
   position: absolute;
@@ -18,14 +44,26 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
 
-}
+} */
+/*  start of iPad Pro code   1024 x 1036    */
+/* @media only screen and (max-width: 1024px) {
+
+  * {
+    font-size: large;
+    width: 1024px;
+    margin: 0px auto;
+    background-color: rgb(128, 0, 128)
+  }
 
 
-/* start of mobile code */
 
-@media only screen and (max-width: 760px) {
+} */
 
-* {
+/* start of mobile code  Galaxy S5 360 x 640  */
+
+@media only screen and (max-width: 480px) {
+
+/* * {
   font-size: large;
   width: 480px;
   background-color: wheat;
@@ -91,7 +129,7 @@ section > div > p{
 footer {
   margin: 0px auto;
   height: 80px;
-}
+} */
  
 
 /* end of mobile format */
