--- a/css/layout.css
+++ b/css/layout.css
@@ -1,34 +1,98 @@
 /* Windows layout  */
 
+
 * {
   background-color: rgb(250, 232, 232);
-  /* display: flexbox; */
+    
+}
+
+body {
+  max-width: 1200px;
   
 }
 
-.topbox{
-  /* width: 960px;
-  margin: 0 auto; */
-  display: flex;
+
+
+.topbox {
+  height: 100px; 
+  max-width: 960px;
+  background-color: burlywood;
+   
 }
 
-#boxa {
-  flex: 1;
+.boxa {
+
 }
-p {
-  flex: 1;
-}
+
 .mainbox{
   display: flex;
+  max-width: 960px;
+  outline: dotted 3px blue;
+}
 
+.boxb {
+  flex: 1;
+  height: 600px;
+  background-color: thistle;
+}
+
+.boxc {
+  flex: 2;
+  height: 200px; 
+  background-color: skyblue;
+}
+
+.boxd {
+  flex: 2;
+  height: 200px;
+  margin: 0 auto;
+  background-color: wheat;
 }
 
 .sectionbox {
+  outline: 3px dotted blue;
   display: flex;
+  margin: auto;
+  max-width: 768px;
+  
+}
+.boxe {
+  flex: 1;
+  height: 250px;
+  background-color: seagreen;
+  
+}
+.boxf {
+  flex: 1;
+  height: 250px;
+  background-color: greenyellow;
+ 
+}
+.boxg {
+  flex: 1;
+  height: 250px;
+  background-color: lightseagreen;
+
+}
+.boxh {
+  flex: 1;
+  height: 250px;
+  background-color: lawngreen;
+ 
 }
 
 .footerbox {
   display: flex;
+  max-width: 760px;
+  align-content: flex-start;
+   
+}
+
+.boxi {
+  flex: 1;
+  
+  height: 150px;
+  background-color: maroon;
 }
 
 
@@ -36,15 +100,16 @@ p {
   https://stackoverflow.com/questions/5703552/css-center-text-horizontally-and-vertically-inside-a-div-block 
   
   */
-/* p {
-  background-color: transparent;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  p {
+    background-color: transparent;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+  }
 
-} */
 /*  start of iPad Pro code   1024 x 1036    */
 /* @media only screen and (max-width: 1024px) {
 
@@ -63,7 +128,7 @@ p {
 
 @media only screen and (max-width: 480px) {
 
-/* * {
+* {
   font-size: large;
   width: 480px;
   background-color: wheat;
@@ -129,7 +194,7 @@ section > div > p{
 footer {
   margin: 0px auto;
   height: 80px;
-} */
+}
  
 
 /* end of mobile format */
