--- a/css/test.css
+++ b/css/test.css
@@ -9,8 +9,6 @@ Wrapper around Body
           footerbox
             grandkid - box i
 
-
-
 */
 
 
@@ -20,48 +18,34 @@ Wrapper around Body
 }
 
 body {
-  /* box-sizing: border-box; */
   max-width: 1200px;
-  /* display: flex;
-  flex-wrap: wrap; */
   
 }
+
 p {
-  font-size: xx-large;
-  align-items: center;
   background-color: transparent;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
 }
 
 .topbox {
   height: 100px; 
   max-width: 960px;
   background-color: burlywood;
-
-
-  /* flex: 1; */
-  /* order: 1; */
-  /* display: flex; */
-  /* margin: 0 auto;*/
-  /* max-width: 960px; */
-    
+   
 }
+
 .boxa {
-  /* flex: 1; */
-  
-  /* background-color: burlywood; */
-  
-  /* border: 3px solid grey; */
+
 }
 
 .mainbox{
   display: flex;
   max-width: 960px;
-   /* order: 2; */
-  /* flex: 1; */
-  /* align-self: flex-start; */
-  /* justify-content: left; */
-  
-  /* align-items: flex-start; */
   outline: dotted 3px blue;
 }
 
@@ -69,23 +53,16 @@ p {
   flex: 1;
   height: 600px;
   background-color: thistle;
-  /* border: 3px solid grey; */
-  /* width: 200px; */
-  /* margin: 0 auto; */
 }
+
 .boxc {
   flex: 2;
-  /* border: 3px solid grey; */
-  /* width: 380px; */
   height: 200px; 
-  /* margin: 0 auto; */
   background-color: skyblue;
 }
 
 .boxd {
   flex: 2;
-  /* border: 3px solid grey; */
-  /* width: 380px; */
   height: 200px;
   margin: 0 auto;
   background-color: wheat;
@@ -97,59 +74,33 @@ p {
   margin: auto;
   max-width: 768px;
   
-  /* flex: 1; */
-  /* order: 3; */
-  /* float: right; */
-  /* width: 760px; */
-  /* flex-wrap: wrap; */
-  /* justify-content: flex-end;
-  align-content: space-around;
-   */
-  
 }
 .boxe {
   flex: 1;
   height: 250px;
- 
   background-color: seagreen;
-  /* align-self: auto; */
-  /* border: 3px solid grey; */
-  /* width: 190px; */
-  /* flex-grow: 1; */
   
 }
 .boxf {
   flex: 1;
   height: 250px;
   background-color: greenyellow;
-  /* width: 190px; */
-  /* flex-grow: 1; */
-  /* border: 3px solid grey; */
  
 }
 .boxg {
   flex: 1;
   height: 250px;
   background-color: lightseagreen;
-  /* width: 190px; */
-  /* flex-grow: 1; */
-  /* border: 3px solid grey; */
 
 }
 .boxh {
   flex: 1;
   height: 250px;
   background-color: lawngreen;
-  /* width: 190px; */
-  /* flex-grow: 1; */
-  /* border: 3px solid grey; */
  
 }
 
 .footerbox {
-  /* padding: 20px; */
-  /* flex: 1; */
-  /* order: 4; */
   display: flex;
   max-width: 760px;
   align-content: flex-start;
